Improve stability for manages_aspects.feature:79
page.execute_scripts looks to be asynchronous, .synced is already set
by default, so the previous expectation would be fulfilled before
the script got to run, running into the page reload in the next step
which then aborts or hasen't seen the to be triggered request yet.

The fix is to use Capybaras drag_to instead

--- a/app/views/contacts/_aspect_listings.haml
+++ b/app/views/contacts/_aspect_listings.haml
@@ -1,5 +1,5 @@
 #aspect_nav
-  %ul.list-group.synced.ui-sortable
+  %ul.list-group.ui-sortable
     %a.list-group-item.ui-sortable-handle.all_contacts{class: ("active" if params["set"] == "all"), href: contacts_path(set: "all")}
       = t('contacts.index.all_contacts')
       .badge.badge-default.pull-right
